[project]
name = "food-streamimng-api-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.36.12",
    "fastapi==0.85.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "requests==2.31.0",
    "snowflake-connector-python>=3.13.2",
    "urllib3==1.26.6",
    "uvicorn==0.19.0",
]
